02102023 | collapse - fix position

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -82,6 +82,9 @@ footer {
 
 .collapse {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  height: auto;
   margin-top: 20px;
   background-color: none;
   border-radius: 5px;
@@ -116,7 +119,6 @@ footer {
 }
 
 .dropdown-content {
-  position: absolute;
   top: 100%;
   width: 100%;
   display: none;
